--- a/www/ui/index.html
+++ b/www/ui/index.html
@@ -227,44 +227,44 @@
 		</tr>
 		
 		<tr class="a">
-		<td><a href="./milestone6x_screens/2-4-0_step1.html">2-4-0_step1</a></td>	
+		<td><a href="./milestone6x_screens/2-4-0_step1.html">2.4.0_step1</a></td>	
 		<td>step 1 in reports wizard</td>	
 		<td>?</td>
 		</tr>
 		
 		<tr class="b">
-		<td><a href="./milestone6x_screens/2-4-0_step1-5.html">2-4-0_step1-5</a></td>	
+		<td><a href="./milestone6x_screens/2-4-0_step1-5.html">2.4.0_step1-5</a></td>	
 		<td>step 2 in reports wizard: comparative analysis</td>	
 		<td>?</td>
 		</tr>
 		
 		<tr class="a">
-		<td><a href="./milestone6x_screens/2-4-0_step2.html">2-4-0_step2</a></td>
+		<td><a href="./milestone6x_screens/2-4-0_step2.html">2.4.0_step2</a></td>
 		<td>step 3 in reports wizard: comparative analysis</td>	
 		<td>?</td>
 		</tr>
 		
 		<tr class="b">
-		<td><a href="./milestone6x_screens/2-4-0_step3.html">2-4-0_step3</a></td>	
+		<td><a href="./milestone6x_screens/2-4-0_step3.html">2.4.0_step3</a></td>	
 		<td>step 4 in reports wizard: comparative analysis output</td>	
 		<td>?</td>
 		</tr>
 		
 		
 		<tr class="a">
-		<td><a href="./milestone6x_screens/2-4-0_step1-5b.html">2-4-0_step1-5b</a></td>	
+		<td><a href="./milestone6x_screens/2-4-0_step1-5b.html">2.4.0_step1-5b</a></td>	
 		<td>step 2 in reports wizard: rate of change</td>	
 		<td>?</td>
 		</tr>
 		
 		<tr class="b">
-		<td><a href="./milestone6x_screens/2-4-0_step2b.html">2-4-0_step2b</a></td>	
+		<td><a href="./milestone6x_screens/2-4-0_step2b.html">2.4.0_step2b</a></td>	
 		<td>step 3 in reports wizard: rate of change</td>	
 		<td>?</td>
 		</tr>
 		
 		<tr class="a">
-		<td><a href="./milestone6x_screens/2-4-0_step3b.html">2-4-0_step3b</a></td>	
+		<td><a href="./milestone6x_screens/2-4-0_step3b.html">2.4.0_step3b</a></td>	
 		<td>step 4 in reports wizard: rate of change output</td>	
 		<td>?</td>
 		</tr>
@@ -298,25 +298,25 @@
 		</tr>
 		
 		<tr class="a">
-		<td><a href="./milestone8x_screens/3-6-0.html">3-6-0</a></td>	
+		<td><a href="./milestone8x_screens/3-6-0.html">3.6.0</a></td>	
 		<td>Approve / reject user submitted X</td>	
 		<td>?</td>
 		</tr>
 		
 		<tr class="b">
-		<td><a href="./milestone8x_screens/2.0.0.1.1.html">2.0.0.1.1</a></td>	
+		<td><a href="./milestone8x_screens/2-0-0-1-1.html">2.0.0.1.1</a></td>	
 		<td>Add / remove / sort queues</td>	
 		<td>?</td>
 		</tr>
 		
 		<tr class="a">
-		<td><a href="./milestone8x_screens/2-0-0-1-2.html">2-0-0-1-2</a></td>	
+		<td><a href="./milestone8x_screens/2-0-0-1-2.html">2.0.0.1.2</a></td>	
 		<td>Predefined queue list</td>	
 		<td>?</td>
 		</tr>
 		
 		<tr class="b">
-		<td><a href="./milestone8x_screens/2-0-0-1-3.html">2-0-0-1-3</a></td>	
+		<td><a href="./milestone8x_screens/2-0-0-1-3.html">2.0.0.1.3</a></td>	
 		<td>Queue</td>	
 		<td>?</td>
 		</tr>
@@ -333,19 +333,19 @@
 		</tr>
 		
 		<tr class="a">
-		<td><a href="./milestone10x_screens/2-1-0-1.html">2-1-0-1</a></td>	
+		<td><a href="./milestone10x_screens/2-1-0-1.html">2.1.0.1</a></td>	
 		<td>Save / edit template</td>	
 		<td>?</td>
 		</tr>
 		
 		<tr class="b">
-		<td><a href="./milestone10x_screens/2-1-0-2.html">2-1-0-2</a></td>	
+		<td><a href="./milestone10x_screens/2-1-0-2.html">2.1.0.2</a></td>	
 		<td>Template list</td>	
 		<td>?</td>
 		</tr>
 		
 		<tr class="a">
-		<td><a href="./milestone10x_screens/2-1-4-0.html">2-1-4-0</a></td>	
+		<td><a href="./milestone10x_screens/2-1-4-0.html">2.1.4.0</a></td>	
 		<td>Customize / create "enter issue"</td>	
 		<td>?</td>
 		</tr>
