--- a/www/ui/index.html
+++ b/www/ui/index.html
@@ -34,7 +34,7 @@
 	<dd>
 		<table>
 		<tr>
-		<th>comp</th>
+		<th width="100">comp</th>
 		<th>title</th>
 		<th>template pathname (/scarab/src/templates/screens)</th>
 		</tr>
@@ -111,7 +111,7 @@
 	<dd>
 		<table>
 		<tr>
-		<th>comp</th>	
+		<th width="100">comp</th>	
 		<th>title</th>	
 		<th>template pathname (/scarab/src/templates/screens)</th>
 		</tr>
@@ -146,7 +146,7 @@
 	<dd>
 		<table>
 		<tr>
-		<th>comp</th>	
+		<th width="100">comp</th>	
 		<th>title</th>	
 		<th>template pathname (/scarab/src/templates/screens)</th>
 		</tr>
@@ -164,12 +164,18 @@
 		</tr>
 		
 		<tr class="a">
-		<td>2.7.0 <a href="./milestone3x_screens/2-7-0_step1.html">(step 1)</a> | <a href="./milestone3x_screens/2-7-0_step2.html">(step 2)</a></td>
-		<td>Move/copy issue</td>	
+		<td><a href="./milestone3x_screens/2-7-0_step1.html">2.7.0 step 1</a></td>
+		<td>Move/copy issue</td>
 		<td>? - suggest 'MovCopIss.vm'</td>
 		</tr>
 		
 		<tr class="b">
+		<td><a href="./milestone3x_screens/2-7-0_step2.html">2.7.0 step 2</a></td>
+		<td>Move/copy issue</td>
+		<td>? - suggest 'MovCopIss.vm'</td>
+		</tr>
+		
+		<tr class="a">
 		<td><a href="./milestone3x_screens/3-3-0.html">3.3.0</a></td>	
 		<td>Voting Management</td>	
 		<td>? - suggest 'VotiMan.vm'</td>
@@ -181,7 +187,7 @@
 	<dd>
 		<table>
 		<tr>
-		<th>comp</th>	
+		<th width="100">comp</th>	
 		<th>title</th>	
 		<th>template pathname (/scarab/src/templates/screens)</th>
 		</tr>
@@ -204,7 +210,7 @@
 	<dd>
 		<table>
 		<tr>
-		<th>comp</th>	
+		<th width="100">comp</th>	
 		<th>title</th>	
 		<th>template pathname (/scarab/src/templates/screens)</th>
 		</tr>
@@ -221,7 +227,7 @@
 	<dd>
 		<table>
 		<tr>
-		<th>comp</th>	
+		<th width="100">comp</th>	
 		<th>title</th>	
 		<th>template pathname (/scarab/src/templates/screens)</th>
 		</tr>
@@ -292,7 +298,7 @@
 	<dd>
 		<table>
 		<tr>
-		<th>comp</th>	
+		<th width="100">comp</th>	
 		<th>title</th>	
 		<th>template pathname (/scarab/src/templates/screens)</th>
 		</tr>
@@ -327,7 +333,7 @@
 	<dd>
 		<table>
 		<tr>
-		<th>comp</th>	
+		<th width="100">comp</th>	
 		<th>title</th>	
 		<th>template pathname (/scarab/src/templates/screens)</th>
 		</tr>
