--- a/www/ui/index.html
+++ b/www/ui/index.html
@@ -21,7 +21,7 @@
 
 <h2>Scarab UI</h2>
 
-<strong>Currently Being Updated</strong> - <em>August 30th, 2001; 12:08 am; <a href="mailto:matthew@collab.net">matthew caillouet</a></em>
+<strong>Currently Being Updated</strong> - <em>August 30th, 2001; 12:13 am; <a href="mailto:matthew@collab.net">matthew</a></em>
 
 <ul>
 	<li><a href="#milscre">Milestone screens - resource map</a></li>
