--- a/www/ui/milestone1x_screens/2-6-2.html
+++ b/www/ui/milestone1x_screens/2-6-2.html
@@ -626,7 +626,7 @@
 		
 		<p id="functnbar"><input type="submit" value="save issue #121" />&#160;<input type="submit" value="cancel" /></p>
 				
-		<p>issues per page:&#160; <input type="radio" name="foo" checked /> 25 <input type="radio" name="foo" /> 50 <input type="radio" name="foo" /> 75 <input type="radio" name="foo" /> 100&#160;<input type="submit" value="refresh" /></p>
+		<p>issues per page:&#160; <input type="radio" name="foo" checked="checked" /> 25 <input type="radio" name="foo" /> 50 <input type="radio" name="foo" /> 75 <input type="radio" name="foo" /> 100&#160;<input type="submit" value="refresh" /></p>
 				
 		<p>&#171; previous | 1 page of 3 | <a href="#">next</a> <a href="#">&#187;</a></p>
 	</div>
