--- a/www/ui/milestone1x_screens/funct_dir.html
+++ b/www/ui/milestone1x_screens/funct_dir.html
@@ -152,44 +152,45 @@
 		
 		<tr>
 		<td width="50%">         
-		<p>
-		<a href="#"><strong>Enter issue template list</strong></a><br>
+		
+		<div><a href="#"><strong>Enter issue template list</strong></a></div>
 		<small>List of all enter issue templates available to role. User can access template details, in order to view or edit, by clicking on the templates name. User selects to use a template via a pop-up menu at the top of the enter isse page. This template remains as the default until another selection is made.</small>
-		</p>
-		<p>
-		<a href="#"><strong>Saved query list</strong></a><br>
+		
+		
+		<div><a href="#"><strong>Saved query list</strong></a></div>
 		<small>List of all saved queries avaible to role. User can access saved query details , in order to view or edit, by clicking on the query's name, and execute a query by clicking on it's associated project. Saved queries are also available through a pop-up menu at the top of every screen within scarab.</small>
-		</p>
-		<p>
-		<a href="#"><strong>Vote management</strong></a><br>
+		
+		
+		<div><a href="#"><strong>Vote management</strong></a></div>
 		<small>This list displays a user's current open votes, and a vote management interface they can use to rescind/reprioritize votes, or to append comments to votes.</small>
-		</p>
-		<p>
-		<a href="#"><strong>Auto alert email options</strong></a><br>
+		
+		
+		<div><a href="#"><strong>Auto alert email options</strong></a></div>
 		<small>Subscription/frequency options for auto alert emails available per project.</small>
-		</p>
+		
 		</td>
 		<td>&nbsp;&nbsp;</td>
 		<td width="50%">
-		<p>
-		<a href="#"><strong>Approve / reject user submissions</strong></a><br>
+		
+		<div><a href="#"><strong>Approve / reject user submissions</strong></a></div>
 		<small>Review and respond interface for user submissions including, role promotions, saved queries, templates, automated alert emails, etc.</small>
-		</p>
-		<p>
-		<a href="#"><strong>Manage "enter issue" form</strong></a><br>
-		<small>Add, edit, create, group, and arrange attributes on the "enter issue form".</small></p>
-		<p>
-		<a href="#"><strong>Global attributes</strong></a><br>
+		
+		
+		<div><a href="#"><strong>Manage "enter issue" form</strong></a></div>
+		<small>Add, edit, create, group, and arrange attributes on the "enter issue form".</small>
+		
+		
+		<div><a href="#"><strong>Global attributes</strong></a></div>
 		<small>Master list of all attributes, both out of the box, and custom, available for use when creating/editing the enter "issue form".</small>
-		</p>
-		<p>
-		<a href="#"><strong>Vote management</strong></a><br>
+		
+		
+		<div><a href="#"><strong>Vote management</strong></a></div>
 		<small>Project level settings for votes. Admin settings include determining when a vote is added to an issue (manual or automatic), how many votes are required to force a state change, etc.</small>
-		</p>
-		<p>
-		<a href="#"><strong>Auto alert email list</strong></a><br>
+		
+		
+		<div><a href="#"><strong>Auto alert email list</strong></a></div>
 		<small>Manage, edit, and create auto alert emails used for automated workflow management within a Scarab project.</small>
-		</p>
+		
 		</td>
 		</tr>
 		
