--- a/www/ui/milestone2x_screens/2-2-0.html
+++ b/www/ui/milestone2x_screens/2-2-0.html
@@ -506,7 +506,7 @@
 			
 			<tr>
 			<th width="120">date range:</th>
-			<td><input type="text" size=9 value="XX/XX/XXXX">&nbsp;<input type="text" size=4 value="00:00"> to <input type="text" size=9 value="XX/XX/XXXX">&nbsp;<input type="text" size=4 value="00:00"></td>
+			<td><input type="text" size="9" value="XX/XX/XXXX" />&nbsp;<input type="text" size="4" value="00:00" /> to <input type="text" size="9" value="XX/XX/XXXX" />&nbsp;<input type="text" size="4" value="00:00" /></td>
 			</tr>
 			</table>
 		</div>
