--- a/www/ui/milestone2x_screens/2-6-0-1.html
+++ b/www/ui/milestone2x_screens/2-6-0-1.html
@@ -154,7 +154,7 @@
 		</tr>
 		
 		<tr class="a">
-		<td><input type="checkbox" name="show-hide" checked /></td>
+		<td><input type="checkbox" name="show-hide" checked="checked" /></td>
 		<td>Issue ID #</td>
 		<td>
 		<select>
@@ -164,7 +164,7 @@
 		</tr>
 		
 		<tr class="b">
-		<td><input type="checkbox" name="show-hide"  checked /></td>
+		<td><input type="checkbox" name="show-hide"  checked="checked" /></td>
 		<td>issue summary</td>
 		<td>
 		<select>
@@ -174,7 +174,7 @@
 		</tr>
 		
 		<tr class="a">
-		<td><input type="checkbox" name="show-hide"  checked /></td>
+		<td><input type="checkbox" name="show-hide"  checked="checked" /></td>
 		<td>assignees</td>
 		<td>
 		<select>
@@ -184,7 +184,7 @@
 		</tr>
 		
 		<tr class="b">
-		<td><input type="checkbox" name="show-hide"  checked /></td>
+		<td><input type="checkbox" name="show-hide"  checked="checked" /></td>
 		<td>date created</td>
 		<td>
 		<select>
@@ -194,7 +194,7 @@
 		</tr>        
 		
 		<tr class="a">
-		<td><input type="checkbox" name="show-hide"  checked /></td>
+		<td><input type="checkbox" name="show-hide"  checked="checked" /></td>
 		<td>attribute X</td>
 		<td>
 		<select>
@@ -204,7 +204,7 @@
 		</tr>
 		
 		<tr class="b">
-		<td><input type="checkbox" name="show-hide"  checked /></td>
+		<td><input type="checkbox" name="show-hide"  checked="checked" /></td>
 		<td>attribute y</td>
 		<td>
 		<select>
