--- a/www/ui/milestone2x_screens/2-6-0.html
+++ b/www/ui/milestone2x_screens/2-6-0.html
@@ -238,7 +238,7 @@
 			</table>
 		</div>
 		
-		<p>issues per page:&#160; <input type="radio" name="foo" checked /> 25 <input type="radio" name="foo" /> 50 <input type="radio" name="foo" /> 75 <input type="radio" name="foo" /> 100&#160;<input type="submit" value="refresh" class="bttn" /></p>
+		<p>issues per page:&#160; <input type="radio" name="foo" checked="checked" /> 25 <input type="radio" name="foo" /> 50 <input type="radio" name="foo" /> 75 <input type="radio" name="foo" /> 100&#160;<input type="submit" value="refresh" class="bttn" /></p>
 		
 		<p>&#171; previous | 1 of 1 | next &#187; (<a href="#">add/remove attributes from view</a>)</p>
 	</div>
