--- a/www/ui/milestone5x_screens/3-5-1.html
+++ b/www/ui/milestone5x_screens/3-5-1.html
@@ -177,7 +177,9 @@
 			
 			<tr>
 			<th width="120">author:</th>
-			<td>Joe Smo<br><a href="#">joes@users.com</a></td>
+			<td>
+			<div>Joe Smo</div>
+			<a href="#">joes@users.com</a></td>
 			</tr>
 			
 			</table>
