--- a/www/ui/milestone3x_screens/2-7-0_step2.html
+++ b/www/ui/milestone3x_screens/2-7-0_step2.html
@@ -258,19 +258,19 @@
 		</tr>
 		
 		<tr class="a">
-		<td><input type="checkbox" name="x" value="x" checked /></td>
+		<td><input type="checkbox" name="x" value="x" checked="checked" /></td>
 		<td><input type="text" name="x" value="attribute name X" /></td>
 		<td><input type="text" name="x" value="option X" /></td>
 		</tr>
 		
 		<tr class="b">
-		<td><input type="checkbox" name="x" value="x" checked /></td>
+		<td><input type="checkbox" name="x" value="x" checked="checked" /></td>
 		<td><input type="text" name="x" value="attribute name X" /></td>
 		<td><input type="text" name="x" value="option X" /></td>
 		</tr>
 		
 		<tr class="a">
-		<td><input type="checkbox" name="x" value="x" checked /></td>
+		<td><input type="checkbox" name="x" value="x" checked="checked" /></td>
 		<td><input type="text" name="x" value="attribute name X" /></td>
 		<td><input type="text" name="x" value="option X" /></td>
 		</tr>
