--- a/www/ui/milestone6x_screens/2-4-0_step1-5b.html
+++ b/www/ui/milestone6x_screens/2-4-0_step1-5b.html
@@ -148,7 +148,7 @@
 			<table border="1" cellspacing="2" cellpadding="3">
 			<tr>
 			<th width="120">report name:</th>
-			<td><input type="text" name="name"></td>
+			<td><input type="text" name="name" /></td>
 			</tr>
 			
 			<tr>
@@ -170,7 +170,7 @@
 		
 		<h3>Report content</h3>	  
 		
-		<p>
+		<div>
 			<table width="100%" border="1" cellspacing="2" cellpadding="3">
 			<tr>
 			<th>rows: criteria</th>
@@ -189,7 +189,7 @@
 			<td>&nbsp;</td>
 			</tr>
 			</table>
-		</p>
+		</div>
 		
 		<p id="functnbar"><input type="submit" value="continue" />&nbsp;<input type="submit" value="back" /></p>
 	</div>
