--- a/www/ui/milestone6x_screens/2-4-0_step2c.html
+++ b/www/ui/milestone6x_screens/2-4-0_step2c.html
@@ -197,7 +197,8 @@
 		<div class="sidebyside">
 		<table width="100%" border="1" cellspacing="2" cellpadding="3">
 		<tr>
-		<th>Users<br /><input type="radio" name="column" checked="checked" />&#160;column heading(s) (if selected)</th>
+		<th><div>Users</div>
+		<input type="radio" name="column" checked="checked" />&#160;column heading(s) (if selected)</th>
 		<th><input type="radio" name="column" />Attributes / options<div class="note">column heading(s) (if selected)</div></th>
 		</tr>
 		
