--- a/www/ui/milestone6x_screens/2-4-0_step1.html
+++ b/www/ui/milestone6x_screens/2-4-0_step1.html
@@ -149,7 +149,7 @@
 			<tr>
 			<th width="120">report name:</th>
 			<td>         
-			<input type="text" name="name">		
+			<input type="text" name="name" />		
 			</td>
 			</tr>
 			
