--- a/www/ui/milestone6x_screens/2-4-0_step2.html
+++ b/www/ui/milestone6x_screens/2-4-0_step2.html
@@ -148,7 +148,7 @@
 			<table border="1" cellspacing="2" cellpadding="3">
 			<tr>
 			<th width="120">report name:</th>
-			<td><input type="text" name="name"></td>
+			<td><input type="text" name="name" /></td>
 			</tr>
 			
 			<tr>
@@ -179,7 +179,7 @@
 			</table>
 		</div>
 		
-<p>
+<div>
 <table width="100%" border="1" cellspacing="2" cellpadding="3">
 <tr>
 <th>rows: attributes/options</th>
@@ -233,7 +233,7 @@ Severity
 </td>
 </tr>
 </table>
-</p>
+</div>
 
 		<p id="functnbar"><input type="submit" value="continue" />&nbsp;<input type="submit" value="back" /></p>
 	</div>
