--- a/www/ui/milestone8x_screens/3-6-0.html
+++ b/www/ui/milestone8x_screens/3-6-0.html
@@ -222,7 +222,7 @@
 		<div class="axial">
 			<table width="100%" border="1" cellspacing="2" cellpadding="3">
 			<tr>
-			<th width="120"><small>comments<br>(sent to selected submittees)</small></th>
+			<th width="120"><div>comments</div>(sent to selected submittees)</th>
 			<td><textarea rows="4" cols="40"></textarea></td>
 			</tr>
 			</table>
