--- a/www/ui/milestone1x_screens/2-1-0.html
+++ b/www/ui/milestone1x_screens/2-1-0.html
@@ -145,9 +145,9 @@
 		<div id="tabs">
 			<table cellpadding="3" cellspacing="0" border="0">
 			<tr>
-			<th>Summary info</th>
-			<td><a href="#" title="view duplicate check information">Duplicate check</a></td>
-			<td><a href="#" title="view verbose information">Verbose info</a></td>
+			<th><small>1:</small> Summary info</th>
+			<td><small>2:</small> <a href="#" title="view duplicate check information">Duplicate check</a></td>
+			<td><small>3:</small> <a href="#" title="view verbose information">Verbose info</a></td>
 			</tr>
 			</table>
 		</div>
