--- a/www/ui/milestone1x_screens/2-1-2.html
+++ b/www/ui/milestone1x_screens/2-1-2.html
@@ -145,9 +145,9 @@
 		<div id="tabs">
 			<table cellpadding="3" cellspacing="0" border="0">
 			<tr>
-			<td><a href="#" title="view summary information">Summary info</a></td>
-			<td><a href="#" title="view duplicate check information">Duplicate check</a></td>
-			<th>Verbose info</th>
+			<td><small>1:</small> <a href="#" title="view summary information">Summary info</a></td>
+			<td><small>2:</small> <a href="#" title="view duplicate check information">Duplicate check</a></td>
+			<th><small>3:</small> Verbose info</th>
 			</tr>
 			</table>
 		</div>
