--- a/www/ui/milestone1x_screens/3-0-0.html
+++ b/www/ui/milestone1x_screens/3-0-0.html
@@ -141,8 +141,24 @@
 	<!-- Scarab - App -->
 	<div class="app" id="div3-0-0">
 		<h2>Global attributes (3.0.0)</h2>
+
+
 		
-		<p id="functnbar"><input type="submit" value="create new attribute" /></p>
+		<div id="functnbar">
+			<table cellpadding="0" cellspacing="0" border="0">
+			<tr>
+			<th>select items to:</th>
+			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
+			<th>general functions</th>
+			</tr>
+			<tr>
+			<td><input type="submit" value="add to 'Enter issue page'" class="bttn" />&nbsp;<input type="submit" value="copy" class="bttn" />&nbsp;<input type="submit" value="delete" class="bttn" /></td>
+			<td><input type="submit" value="create new" class="bttn" />&nbsp;<input type="submit" value="cancel" class="bttn" /></td>
+
+			</tr>
+			</table>
+		</div>
+		
 		
 		<h3>Global attributes</h3>
 		
@@ -199,11 +215,23 @@
 		</tr>
 		</table>
 
-		<p><input type="submit" value="delete selected" /></p>
 
-		<p><input type="submit" value="add selected to entry page" />&#160;<input type="submit" value="cancel" /></p>
+		
+		<div id="functnbar">
+			<table cellpadding="0" cellspacing="0" border="0">
+			<tr>
+			<th>select items to:</th>
+			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
+			<th>general functions</th>
+			</tr>
+			<tr>
+			<td><input type="submit" value="add to 'Enter issue page'" class="bttn" />&nbsp;<input type="submit" value="copy" class="bttn" />&nbsp;<input type="submit" value="delete" class="bttn" /></td>
+			<td><input type="submit" value="create new" class="bttn" />&nbsp;<input type="submit" value="cancel" class="bttn" /></td>
 
-		<p id="functnbar"><input type="submit" value="create new attribute" /></p>
+			</tr>
+			</table>
+		</div>
+		
 	</div>
 	<!-- Scarab - App -->
 
