--- a/www/ui/milestone10x_screens/2-1-0-1.html
+++ b/www/ui/milestone10x_screens/2-1-0-1.html
@@ -162,7 +162,7 @@
 			
 			<tr>
 			<th>template author:</th>
-			<td>Joe Smo<br />
+			<td><div>Joe Smo</div>
 			<a href="#">joes@users.com</a></td>
 			</tr>
 			</table>
