validation details w/braino's updates

--- a/www/ui/milestone2x_screens/2-2-1.html
+++ b/www/ui/milestone2x_screens/2-2-1.html
@@ -300,7 +300,7 @@
 			</tr>
 			</table>
 		</div>
-<<<<<<< 2-2-1.html
+
        <h3>State change query</h3>
 	<div class="axial">
        <table width="100%" cellpadding="3" cellspacing="2" border="1">
@@ -324,7 +324,7 @@
           etc
           </option>
 
-         </select>&nbsp;<input type="submit" name="" value="update options">
+         </select>&nbsp;<input type="submit" name="" value="update options" />
 
           </td>
         </tr>  
