changes to query page UI...
couple of important things here. made all the date range form elements pop-up menus... note the "hour" pop-up.

also, personnel search. this is not "hard wired" as we discussed yesterday, but I recognize an enormous oversight in not calling it out in the 2.2.0 query page (and on the saved query page 2.2.1)

Brian

--- a/www/ui/milestone2x_screens/2-2-1.html
+++ b/www/ui/milestone2x_screens/2-2-1.html
@@ -199,8 +199,164 @@
 			
 			<tr>
 			<th width="120">issue creation date range:</th>
-			<td>from:&#160;<input type="text" size="20" value="" />&#160;&#160;to:&#160;<input type="text" size="20" value="" /></td>
-			</tr>
+         <td><dl><dt>from:</dt>
+
+<dd><select>
+<option>Jan</option>
+<option>Feb</option>
+<option>Mar</option>
+<option>Apr</option>
+<option>May</option>
+<option>Jun</option>
+<option>Jul</option>
+<option>Aug</option>
+<option>Sep</option>
+<option>Oct</option>
+<option>Nov</option>
+<option>Dec</option>
+</select>&#160;<select>
+<option>01</option>
+<option>02</option>
+<option>03</option>
+<option>04</option>
+<option>05</option>
+<option>06</option>
+<option>07</option>
+<option>08</option>
+<option>09</option>
+<option>10</option>
+<option>11</option>
+<option>12</option>
+<option>13</option>
+<option>14</option>
+<option>15</option>
+<option>16</option>
+<option>17</option>
+<option>18</option>
+<option>19</option>
+<option>20</option>
+<option>21</option>
+<option>22</option>
+<option>23</option>
+<option>24</option>
+<option>25</option>
+<option>26</option>
+<option>27</option>
+<option>28</option>
+<option>29</option>
+<option>30</option>
+<option>31</option>
+</select>&#160;<select>
+<option>1999</option>
+<option>2000</option>
+<option>2001</option>
+<option>2002</option>
+<option>2003</option>
+</select> - <select>
+<option>01:00</option>
+<option>02:00</option>
+<option>03:00</option>
+<option>04:00</option>
+<option>05:00</option>
+<option>06:00</option>
+<option>07:00</option>
+<option>08:00</option>
+<option>09:00</option>
+<option>10:00</option>
+<option>11:00</option>
+<option>12:00</option>
+<option>13:00</option>
+<option>14:00</option>
+<option>15:00</option>
+<option>16:00</option>
+<option>17:00</option>
+<option>18:00</option>
+<option>19:00</option>
+<option>20:00</option>
+<option>21:00</option>
+<option>22:00</option>
+<option>23:00</option>
+<option>24:00</option></select></dd>
+
+        
+<dt>to:</dt>
+<dd><select>
+<option>Jan</option>
+<option>Feb</option>
+<option>Mar</option>
+<option>Apr</option>
+<option>May</option>
+<option>Jun</option>
+<option>Jul</option>
+<option>Aug</option>
+<option>Sep</option>
+<option>Oct</option>
+<option>Nov</option>
+<option>Dec</option>
+</select>&#160;<select>
+<option>01</option>
+<option>02</option>
+<option>03</option>
+<option>04</option>
+<option>05</option>
+<option>06</option>
+<option>07</option>
+<option>08</option>
+<option>09</option>
+<option>10</option>
+<option>11</option>
+<option>12</option>
+<option>13</option>
+<option>14</option>
+<option>15</option>
+<option>16</option>
+<option>17</option>
+<option>18</option>
+<option>19</option>
+<option>20</option>
+<option>21</option>
+<option>22</option>
+<option>23</option>
+<option>24</option>
+<option>25</option>
+<option>26</option>
+<option>27</option>
+<option>28</option>
+<option>29</option>
+<option>30</option>
+<option>31</option>
+</select>&#160;<select>
+<option>1999</option>
+<option>2000</option>
+<option>2001</option>
+<option>2002</option>
+<option>2003</option>
+</select> - <select>
+<option>01:00</option>
+<option>02:00</option>
+<option>03:00</option>
+<option>04:00</option>
+<option>05:00</option>
+<option>06:00</option>
+<option>07:00</option>
+<option>08:00</option>
+<option>09:00</option>
+<option>10:00</option>
+<option>11:00</option>
+<option>12:00</option>
+<option>13:00</option>
+<option>14:00</option>
+<option>15:00</option>
+<option>16:00</option>
+<option>17:00</option>
+<option>18:00</option>
+<option>19:00</option>
+<option>20:00</option>
+<option>21:00</option>
+<option>22:00</option>
+<option>23:00</option>
+<option>24:00</option></select></dd></dl>
+</td>			</tr>
 			
 			<tr>
 			<th width="120">votes:</th>
@@ -297,6 +453,36 @@
 			<tr>
 			<th width="120">URL:</th>
 			<td><input type="text" size="25" value="http://" /></td>
+			</tr>
+			</table>
+		</div>
+
+		<h3>Personnel Search</h3>
+		
+		<div class="axial">
+			<table width="100%" cellpadding="3" cellspacing="2" border="1">
+			<tr>
+			<th width="120">committed by:</th>
+			<td><select multiple>
+			<option>role X</option>
+			<option>role Y</option>
+			<option>role Z</option>
+			<option>user@users.com</option>
+			<option>user@users.com</option>
+			<option>user@users.com</option>
+			</select></td>
+			</tr>
+			
+			<tr>
+			<th width="120">assignee(s):</th>
+			<td><select multiple>
+			<option>role X</option>
+			<option>role Y</option>
+			<option>role Z</option>
+			<option>user@users.com</option>
+			<option>user@users.com</option>
+			<option>user@users.com</option>
+			</select></td>
 			</tr>
 			</table>
 		</div>
@@ -419,7 +605,31 @@
 <option>2001</option>
 <option>2002</option>
 <option>2003</option>
-</select></dd>
+</select> - <select>
+<option>01:00</option>
+<option>02:00</option>
+<option>03:00</option>
+<option>04:00</option>
+<option>05:00</option>
+<option>06:00</option>
+<option>07:00</option>
+<option>08:00</option>
+<option>09:00</option>
+<option>10:00</option>
+<option>11:00</option>
+<option>12:00</option>
+<option>13:00</option>
+<option>14:00</option>
+<option>15:00</option>
+<option>16:00</option>
+<option>17:00</option>
+<option>18:00</option>
+<option>19:00</option>
+<option>20:00</option>
+<option>21:00</option>
+<option>22:00</option>
+<option>23:00</option>
+<option>24:00</option></select></dd>
 
         
 <dt>to:</dt>
@@ -474,7 +684,31 @@
 <option>2001</option>
 <option>2002</option>
 <option>2003</option>
-</select></dd></dl>
+</select> - <select>
+<option>01:00</option>
+<option>02:00</option>
+<option>03:00</option>
+<option>04:00</option>
+<option>05:00</option>
+<option>06:00</option>
+<option>07:00</option>
+<option>08:00</option>
+<option>09:00</option>
+<option>10:00</option>
+<option>11:00</option>
+<option>12:00</option>
+<option>13:00</option>
+<option>14:00</option>
+<option>15:00</option>
+<option>16:00</option>
+<option>17:00</option>
+<option>18:00</option>
+<option>19:00</option>
+<option>20:00</option>
+<option>21:00</option>
+<option>22:00</option>
+<option>23:00</option>
+<option>24:00</option></select></dd></dl>
 </td>
         </tr>
 
